# comic-sales-agent

./: .gitignore  CLAUDE.md
.claude/rules/: adk.md  data-viz.md  flutter.md  testing.md  vertex.md
agent/: .env.example  CLAUDE.md  pyproject.toml
agent/comic_sales/: agent.json  agent.py  firestore_client.py
agent/comic_sales/tools/: __init__.py  price_history.py  refresh.py  watchlist.py
agent/tools/: backfill_sales.py  seed_watchlist.py
app/: CLAUDE.md  README.md  pubspec.yaml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/catalog/: comic_catalog.dart
app/lib/theme/: ink_equity.dart
app/test/: widget_test.dart
docs/: CPCD.md  DESIGN_BACKLOG.md  NEXT_SESSION.md  PERFORMANCE.md  PRD-onepager.md  PRD.md  PROJECT_OVERVIEW.md  compact-instructions.md  design_notes.txt  tufte-infographics.md
docs/ADR/: 008-genui-positioning.md
docs/design/: README.md
docs/design/stitch-v1/: DESIGN.md
shared/catalog/: comic_catalog_v1.md
