[project]
name = "comic-sales-agent"
version = "0.1.0"
description = "ADK agent for comic sales tracking — emits A2UI catalog payloads"
requires-python = ">=3.12"
dependencies = [
    "google-adk==2.2.0",
    "a2ui-agent-sdk==0.2.4",
    "a2a-sdk[http-server]==0.3.6",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
